Description file amended in new variable assignment '=' replaced by '<-' in code to comply with R standards.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
-Package: testGrid
+Package: ji.dev.sv
 Maintainer: <datashield@obiba.org>
 Author: <datashield@obiba.org>
 Version: 1.0
 License: GPL-3
-Title: Grid density object with defined limits (server)
-Description: Grid density object with defined limits (server)
+Title: ji.dev.cl
+Description: ji.dev.sv
 AggregateMethods: ji.griddensitylim.ds, ji.MinMax.ds
-AssignMethods:
+Depends:
+    fields,
+    opal,
+    opaladmin
 Collate:
     'ji.griddensitylim.ds.R'
     'ji.MinMax.ds.R'
