--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 1.0
 License: GPL-3
 Title: ji.dev.sv
 Description: ji.dev.sv (server)
-AggregateMethods: ji.MinMax.ds, ji.griddensitylim.ds
+AggregateMethods: ji.MinMax.ds, ji.griddensitylim.ds, ag.densitygrid.ds
 Collate:
     'ji.griddensitylim.ds.R'
     'ji.MinMax.ds.R'
+    'ag.densitygrid.ds.R
