All functions added back

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,8 @@ Version: 1.0
 License: GPL-3
 Title: ji.dev.sv
 Description: ji.dev.sv (server)
-AggregateMethods: ji.MinMax.ds
+AggregateMethods: ji.MinMax.ds, ji.densitygridlim.ds, ag.densitygrid.ds
 Collate:
+    'ag.densitygrid.ds.R'
+    'ji.densitygridlim.ds.R'
     'ji.MinMax.ds.R'
