test new function name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 1.0
 License: GPL-3
 Title: ji.dev.sv
 Description: ji.dev.sv (server)
-AggregateMethods: ji.MinMax.ds, ji.densitygridlimOLD.ds, ji.densitygrid.ds, ji.densitygridlim.ds
+AggregateMethods: ji.MinMax.ds, ji.densitygridlimOLD.ds, ji.densitygrid.ds,
+    ji.densitygridlim.ds
 Collate:
     'ji.densitygridlim.ds.R'
     'ji.MinMax.ds.R'
