--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,9 @@ Version: 1.0
 License: GPL-3
 Title: ji.dev.sv
 Description: ji.dev.sv (server)
-AggregateMethods: ji.MinMax.ds, ji.densitygridlimOLD.ds, ji.densitygrid.ds,
+AggregateMethods: ji.MinMax.ds, ji.densitygrid.ds,
     ji.densitygridlim.ds
 Collate:
     'ji.densitygridlim.ds.R'
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
-    'ji.densitygridlimOLD.ds.R'
