--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Version: 1.0
 License: GPL-3
 Title: ji.dev.sv
 Description: ji.dev.sv (server)
-AggregateMethods: ji.MinMax.ds, ji.densitygrid.ds,
-    ji.densitygridlim.ds
+AggregateMethods: ji.MinMax.ds, ji.densitygrid.ds
 Collate:
-    'ji.densitygridlim.ds.R'
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
