--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Title: ji.dev.sv
 Description: ji.dev.sv (server)
 AggregateMethods: ji.MinMax.ds,
   ji.densitygrid.ds,
-  colMeans=base::colMeans
+  colMeans=base::colMeans,
+  rowSums=base::rowSums
 Collate:
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
