ji.recodelevels.ds added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,10 @@ Description: ji.dev.sv (server)
 AggregateMethods: ji.MinMax.ds,
     ji.densitygrid.ds,
     colMeans=base::colMeans
-AssignMethods: rowSums=base::rowSums
+AssignMethods: rowSums=base::rowSums,
+    cut=base::cut,
+    seq=base::seq
 Collate:
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
+    'ji.recodelevels.ds.R'
