--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ AggregateMethods: ji.MinMax.ds,
     colMeans=base::colMeans
 AssignMethods: rowSums=base::rowSums,
     cut=base::cut,
-    seq=base::seq
+    seq=base::seq,
+    ji.recodelevels.ds.R
 Collate:
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
