--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ AggregateMethods: ji.MinMax.ds,
 AssignMethods: rowSums=base::rowSums,
     cut=base::cut,
     seq=base::seq,
-    ji.recodelevels.ds
+    ji.recodelevels.ds,
+    ji.changerefgroup.ds.R
 Collate:
     'ji.MinMax.ds.R'
     'ji.densitygrid.ds.R'
