--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ AggregateMethods: ji.MinMax.ds,
     ji.densitygrid.ds,
     colMeans=base::colMeans,
     is.matrix=base::is.matrix,
-    ji.var.ds
+    ji.var.ds,
+    ji.cov.ds
 AssignMethods: rowSums=base::rowSums,
     cut=base::cut,
     seq=base::seq,
@@ -22,3 +23,4 @@ Collate:
     'ji.recodelevels.ds.R'
     'ji.changerefgroup.ds.R'
     'ji.var.ds.R'
+    'ji.cov.ds.R'
